--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
 
       - run:
           name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN"
+          command: export "//registry.npmjs.org/:_authToken=$npm_TOKEN"
 
       - run:
           name: Publishing package to npm
