--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,10 @@ jobs:
           at: "~"
 
       - run:
+          name: save registry
+          command: npm set registry https://registry.npmjs.org/:_authToken=$npm_TOKEN
+
+      - run:
           name: Authenticate with registry
           command: npm adduser --registry=https://registry.npmjs.org/:_authToken=$npm_TOKEN
 
